# mujaco-gym-lite

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
assets/objects/basemesh_edited/coffee_table_a/: coffee_table_a.blend
assets/objects/basemesh_edited/coffee_table_b/: coffee_table_b.blend
assets/objects/basemesh_edited/industrial_shelving_a/: industrial_shelving_a.blend
assets/objects/metaworld/: README.md
assets/robots/: README.md
assets/robots/kinova_jaco2/: j2n6s300_standalone.urdf
assets/textures/: README.md
dockerfiles/cuda126/: Dockerfile  build.sh  launch.sh  requirements.txt
examples/: run_assembly_ring_demo.py  run_button_push_demo.py  run_drawer_open_demo.py  run_hinged_box_open_demo.py  run_lever_pull_demo.py  run_lidded_box_reach_demo.py  run_sliding_door_open.py  run_soccer_demo.py
mujaco_gym_lite/: logger.py  random.py
mujaco_gym_lite/environment_tools/ik_solvers/: ik_sovler.py
mujaco_gym_lite/environment_tools/mujoco_env/: renderer.py
mujaco_gym_lite/environment_tools/mujoco_env/builders/: assembly_ring.py  builder.py  button.py  door.py  drawer.py  hinged_box.py  lever.py  lidded_box.py  ring.py  soccer.py  window.py
mujaco_gym_lite/environment_tools/mujoco_env/env_models/: camera.py  env_model.py  robot.py
mujaco_gym_lite/environment_tools/mujoco_env/functions/: camera.py  contact.py  depth.py  mj_data.py  mj_object.py  mocap.py  reward.py  robot.py  segmentation.py
mujaco_gym_lite/environment_tools/mujoco_env/xmls/: mjcf_configs.py  mjcf_generator.py
mujaco_gym_lite/environments/: __init__.py
mujaco_gym_lite/environments/mujoco_env/: mujoco_env.py  mujoco_renderer.py
mujaco_gym_lite/environments/mujoco_env/assembly_ring/: assembly_ring.py
mujaco_gym_lite/environments/mujoco_env/button/: button.py  constants.py
mujaco_gym_lite/environments/mujoco_env/door/: constants.py  door.py
mujaco_gym_lite/environments/mujoco_env/drawer/: constants.py  drawer.py
mujaco_gym_lite/environments/mujoco_env/hinged_box/: constants.py  hinged_box.py
mujaco_gym_lite/environments/mujoco_env/lever/: constants.py  lever.py
mujaco_gym_lite/environments/mujoco_env/lidded_box/: constants.py  lidded_box.py
mujaco_gym_lite/environments/mujoco_env/ring/: constants.py  (+1 more)
mujaco_gym_lite/environments/wrappers/: __init__.py  action.py  mujoco.py
mujaco_gym_lite/utils/: data.py  explorations.py  files.py  images.py  math.py  randoms.py  solids.py  transforms.py  views.py
(+58 files in other folders)
